Updated to the latest dev version.

--- a/sites/all/modules/contrib/biblio/changelog.html
+++ b/sites/all/modules/contrib/biblio/changelog.html
@@ -9,9 +9,19 @@
 
 <h3>7.x-dev</h3>
 <b>New features...</b>
+<ul>
+<li><a href="http://drupal.org/node/1140366">#1140366</a> Patch: PubMed XML Bulk Import</li>
+</ul>
 
 <b>Bugs Fixed...</b>
 <ul>
+<li><a href="http://drupal.org/node/1145172">#1145172</a> Fixed: Call to undefined function curl_init()</li>
+<li><a href="http://drupal.org/node/1138636">#1138636</a> Fixed: Show filefield attachment link in list view</li>
+<li><a href="http://drupal.org/node/1140366">#1140366</a> Patch: PubMed XML Bulk Import</li>
+<li><a href="http://drupal.org/node/1139432">#1139432</a> Fixed: Biblio Incompatible With Field-fix Branch of Token Module</li>
+<li><a href="http://drupal.org/node/1135326">#1135326</a> Fixed: Notice: Undefined offset </li>
+<li><a href="http://drupal.org/node/1127514">#1127514</a> Patch removes issue numbers from (non journal) chicago style listings. </li>
+<li><a href="http://drupal.org/node/830770">#830770</a> Fixed: Biblio list output not showing filefield path aliases</li>
 <li><a href="http://drupal.org/node/1104928">#1104928</a> Fixed: PubMed Link Setting</li>
 <li><a href="http://drupal.org/node/1104718">#1104718</a> Fixed: PubMed Import multi-paragraph abstracts</li>
 <li><a href="http://drupal.org/node/1055494">#1055494</a> Fixed: Undefined variable: export_map</li>
