--- a/sites/all/libraries/phpwebsockets/client.html
+++ b/sites/all/libraries/phpwebsockets/client.html
@@ -12,7 +12,7 @@
 var socket;
 
 function init(){
-  var host = "ws://localhost:12345/websocket/server.php";
+  var host = "ws://monkey.nhm.ac.uk:12345/websocket/server.php";
   try{
     socket = new WebSocket(host);
     log('WebSocket - status '+socket.readyState);
