Updated biblio to 7.x-1.x-dev (2011-Jun-28)

--- a/sites/all/modules/contrib/biblio/changelog.html
+++ b/sites/all/modules/contrib/biblio/changelog.html
@@ -10,11 +10,17 @@
 <h3>7.x-dev</h3>
 <b>New features...</b>
 <ul>
+<li>Added a "highlight" feature to the "authors" page which allows privileged users to toggle highlighting of potential duplicate authors</li>
 <li><a href="http://drupal.org/node/1140366">#1140366</a> Patch: PubMed XML Bulk Import</li>
 </ul>
 
 <b>Bugs Fixed...</b>
 <ul>
+<li><a href="http://drupal.org/node/972312">#972312</a> Fixed: casting issue in biblio_save_node() (implmented node_object_prepare)</li>
+<li><a href="http://drupal.org/node/1138636">#1138636</a> Fixed: Show filefield attachment link in list view</li>
+<li><a href="http://drupal.org/node/1049218">#1049218</a> Fixed: Bad URL for sort by links</li>
+<li><a href="http://drupal.org/node/1177038">#1177038</a> Fixed: Call to undefined function mb_regex_encoding()</li>
+<li><a href="http://drupal.org/node/1166300">#1166300</a> Fixed: Notice: Undefined index: class in _biblio_sort_tab() (line 569</li>
 <li><a href="http://drupal.org/node/1145172">#1145172</a> Fixed: Call to undefined function curl_init()</li>
 <li><a href="http://drupal.org/node/1138636">#1138636</a> Fixed: Show filefield attachment link in list view</li>
 <li><a href="http://drupal.org/node/1140366">#1140366</a> Patch: PubMed XML Bulk Import</li>
