slickgrid library added

--- a/sites/all/libraries/slickgrid/examples/example-header-row.html
+++ b/sites/all/libraries/slickgrid/examples/example-header-row.html
@@ -17,17 +17,19 @@
         </style>
 	</head>
 	<body>
-		<div style="width:600px;float:left;">
+        <div style="position:relative">
+		<div style="width:600px;">
 			<div id="myGrid" style="width:100%;height:500px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
+		<div class="options-panel">
             <h2>Demonstrates:</h2>
             <ul>
                 <li>Using a fixed header row to implement column-level filters</li>
                 <li>Type numbers in textboxes to filter grid data</li>
             </ul>
 		</div>
+        </div>
 
 		<script src="../lib/firebugx.js"></script>
 
