--- a/sites/all/libraries/slickgrid/examples/example11-autoheight.html
+++ b/sites/all/libraries/slickgrid/examples/example11-autoheight.html
@@ -9,7 +9,7 @@
         <style>
             html,body { margin:0; padding:0; overflow:auto; }
             body { font:11px Helvetica,Arial,sans-serif; }
-            #container { margin:10px; border:solid 1px gray; width:480px; }
+            #container { margin:10px; border:solid 1px gray; width:480px; background:white;}
             #description { position:fixed; top:30px; right:30px; width:25em; }
         </style>
     </head>
