--- a/sites/all/libraries/slickgrid/examples/example13-getItem-sorting.html
+++ b/sites/all/libraries/slickgrid/examples/example13-getItem-sorting.html
@@ -10,7 +10,7 @@
             html,body { margin:0; padding:0; background-color:White; overflow:auto; }
             body { font:11px Helvetica,Arial,sans-serif; }
             #container { position:absolute; top:0; left:0; right:0; bottom:0; }
-            #description { position:fixed; top:30px; right:30px; width:25em; background-color:beige; border:solid 1px gray; }
+            #description { position:fixed; top:30px; right:30px; width:25em; background-color:beige; border:solid 1px gray; z-index:1000; }
             #description h2 { padding-left:0.5em; }
         </style>
     </head>
