--- a/sites/all/libraries/slickgrid/examples/example-checkbox-row-select.html
+++ b/sites/all/libraries/slickgrid/examples/example-checkbox-row-select.html
@@ -14,16 +14,18 @@
     </style>
 </head>
 <body>
-<div style="width:600px;float:left;">
-    <div id="myGrid" style="width:100%;height:500px;"></div>
-</div>
+    <div style="position:relative">
+        <div style="width:600px;">
+            <div id="myGrid" style="width:100%;height:500px;"></div>
+        </div>
 
-<div class="options-panel" style="width:320px;margin-left:650px;">
-    <h2>Demonstrates:</h2>
-    <ul>
-        <li>Checkbox row select column</li>
-    </ul>
-</div>
+        <div class="options-panel">
+            <h2>Demonstrates:</h2>
+            <ul>
+                <li>Checkbox row select column</li>
+            </ul>
+        </div>
+    </div>
 
 <script src="../lib/firebugx.js"></script>
 
