--- a/sites/all/libraries/slickgrid/examples/example-grouping.html
+++ b/sites/all/libraries/slickgrid/examples/example-grouping.html
@@ -19,36 +19,38 @@
 	</style>
 	</head>
 	<body>
-		<div style="width:600px;float:left;">
-			<div class="grid-header" style="width:100%">
-				<label>SlickGrid</label>
-			</div>
-			<div id="myGrid" style="width:100%;height:500px;"></div>
-			<div id="pager" style="width:100%;height:20px;"></div>
-		</div>
+        <div style="position:relative">
+            <div style="width:600px;">
+                <div class="grid-header" style="width:100%">
+                    <label>SlickGrid</label>
+                </div>
+                <div id="myGrid" style="width:100%;height:500px;"></div>
+                <div id="pager" style="width:100%;height:20px;"></div>
+            </div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
-			<b>Options:</b>
-			<hr/>
-			<div style="padding:6px;">
-				<label style="width:200px;float:left">Show tasks with % at least: </label>
-				<div style="padding:2px;">
-					<div style="width:100px;display:inline-block;" id="pcSlider"></div>
-				</div>
-				<br/>
-				<label style="width:200px;float:left">And title including:</label>
-				<input type=text id="txtSearch" style="width:100px;">
-				<br/><br/>
+            <div class="options-panel">
+                <b>Options:</b>
                 <hr/>
-                <button onclick="clearGrouping()">Clear grouping</button><br/>
-                <button onclick="groupByDuration()">Group by duration & sort groups by value</button><br/>
-                <button onclick="groupByDurationOrderByCount()">Group by duration & sort groups by count</button><br/>
-                <button onclick="groupByDurationOrderByCountGroupCollapsed()">Group by duration & sort groups by count, group collapsed</button><br/>
-                <br/>
-                <button onclick="collapseAllGroups()">Collapse all groups</button><br/>
-                <button onclick="expandAllGroups()">Expand all groups</button><br/>
-			</div>
-		</div>
+                <div style="padding:6px;">
+                    <label style="width:200px;float:left">Show tasks with % at least: </label>
+                    <div style="padding:2px;">
+                        <div style="width:100px;display:inline-block;" id="pcSlider"></div>
+                    </div>
+                    <br/>
+                    <label style="width:200px;float:left">And title including:</label>
+                    <input type=text id="txtSearch" style="width:100px;">
+                    <br/><br/>
+                    <hr/>
+                    <button onclick="clearGrouping()">Clear grouping</button><br/>
+                    <button onclick="groupByDuration()">Group by duration & sort groups by value</button><br/>
+                    <button onclick="groupByDurationOrderByCount()">Group by duration & sort groups by count</button><br/>
+                    <button onclick="groupByDurationOrderByCountGroupCollapsed()">Group by duration & sort groups by count, group collapsed</button><br/>
+                    <br/>
+                    <button onclick="collapseAllGroups()">Collapse all groups</button><br/>
+                    <button onclick="expandAllGroups()">Expand all groups</button><br/>
+                </div>
+            </div>
+        </div>
 
 		<div style="margin-left:650px;margin-top:40px;;">
 			<h2>Demonstrates:</h2>
@@ -69,7 +71,11 @@
 
 		<script src="../slick.core.js"></script>
 		<script src="../slick.editors.js"></script>
+        <script src="../plugins/slick.cellrangedecorator.js"></script>
+        <script src="../plugins/slick.cellrangeselector.js"></script>
+        <script src="../plugins/slick.cellselectionmodel.js"></script>
 		<script src="../slick.grid.js"></script>
+		<script src="../slick.groupitemmetadataprovider.js"></script>
 		<script src="../slick.dataview.js"></script>
 		<script src="../controls/slick.pager.js"></script>
 		<script src="../controls/slick.columnpicker.js"></script>
@@ -80,17 +86,18 @@
 		var data = [];
 
 		var columns = [
-			{id:"sel", name:"#", field:"num", cssClass:"cell-selection", width:40, resizable:false, unselectable:true },
-			{id:"title", name:"Title", field:"title", width:120, minWidth:120, cssClass:"cell-title", sortable:true},
+			{id:"sel", name:"#", field:"num", cssClass:"cell-selection", width:40, resizable:false, selectable:false, focusable:false },
+			{id:"title", name:"Title", field:"title", width:120, minWidth:120, cssClass:"cell-title", sortable:true, editor:TextCellEditor},
 			{id:"duration", name:"Duration", field:"duration", sortable:true},
-			{id:"%", name:"% Complete", field:"percentComplete", width:80, formatter:GraphicalPercentCompleteCellFormatter, sortable:true},
+			{id:"%", name:"% Complete", field:"percentComplete", width:80, formatter:GraphicalPercentCompleteCellFormatter, sortable:true, groupTotalsFormatter:avgTotalsFormatter},
 			{id:"start", name:"Start", field:"start", minWidth:60, sortable:true},
 			{id:"finish", name:"Finish", field:"finish", minWidth:60, sortable:true},
 			{id:"effort-driven", name:"Effort Driven", width:80, minWidth:20, maxWidth:80, cssClass:"cell-effort-driven", field:"effortDriven", formatter:BoolCellFormatter, sortable:true}
 		];
 
 		var options = {
-			enableCellNavigation: true
+			enableCellNavigation: true,
+            editable: true
 		};
 
 		var sortcol = "title";
@@ -198,7 +205,7 @@
 		$(function()
 		{
 			// prepare the data
-			for (var i=0; i<10000; i++) {
+			for (var i=0; i<50000; i++) {
 				var d = (data[i] = {});
 
 				d["id"] = "id_" + i;
@@ -211,27 +218,20 @@
 				d["effortDriven"] = (i % 5 == 0);
 			}
 
-
-			dataView = new Slick.Data.DataView();
+            var groupItemMetadataProvider = new Slick.Data.GroupItemMetadataProvider();
+			dataView = new Slick.Data.DataView({
+                groupItemMetadataProvider: groupItemMetadataProvider
+            });
 			grid = new Slick.Grid("#myGrid", dataView, columns, options);
+
+            // register the group item metadata provider to add expand/collapse group handlers
+            grid.registerPlugin(groupItemMetadataProvider);
+
+            grid.setSelectionModel(new Slick.CellSelectionModel());
 
 			var pager = new Slick.Controls.Pager(dataView, grid, $("#pager"));
 			var columnpicker = new Slick.Controls.ColumnPicker(columns, grid, options);
 
-            grid.onClick.subscribe(function(e, args) {
-                var item = this.getDataItem(args.row);
-                if (item && item instanceof Slick.Group && $(e.target).hasClass("slick-group-toggle")) {
-                    if (item.collapsed) {
-                        this.getData().expandGroup(item.value);
-                    }
-                    else {
-                        this.getData().collapseGroup(item.value);
-                    }
-
-                    e.stopImmediatePropagation();
-                    e.preventDefault();
-                }
-            });
 
 			grid.onSort.subscribe(function(e, args) {
                 sortdir = args.sortAsc ? 1 : -1;
@@ -284,7 +284,7 @@
 					if (percentCompleteThreshold != ui.value)
 					{
 						window.clearTimeout(h_runfilters);
-						h_runfilters = window.setTimeout(dataView.refresh, 10);
+						h_runfilters = window.setTimeout(function() { dataView.refresh() }, 10);
 						percentCompleteThreshold = ui.value;
 					}
 				}
@@ -317,7 +317,9 @@
                     return a.value - b.value;
                 }
             );
-
+            dataView.setAggregators([
+                new Slick.Data.Aggregators.Avg("percentComplete")
+            ], false);
             dataView.collapseGroup(0);
 			dataView.endUpdate();
 
