--- a/sites/all/libraries/slickgrid/examples/example-spreadsheet.html
+++ b/sites/all/libraries/slickgrid/examples/example-spreadsheet.html
@@ -15,11 +15,12 @@
         </style>
 	</head>
 	<body>
-		<div style="width:600px;float:left;">
+        <div style="position:relative">
+		<div style="width:600px;">
 			<div id="myGrid" style="width:100%;height:500px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
+		<div class="options-panel">
             <h2>Demonstrates:</h2>
             <ul>
                 <li>Select a range of cells with a mouse</li>
@@ -28,6 +29,7 @@
                 <li>Edit the cell and select a cell range to paste the range</li>
             </ul>
 		</div>
+        </div>
 
 		<script src="../lib/firebugx.js"></script>
 
