--- a/sites/all/libraries/slickgrid/examples/example14-highlighting.html
+++ b/sites/all/libraries/slickgrid/examples/example14-highlighting.html
@@ -25,11 +25,12 @@
 	    </style>
 	</head>
 	<body>
-		<div style="width:520px;float:left;">
+        <div style="position:relative">
+		<div style="width:520px;">
 			<div id="myGrid" style="width:100%;height:500px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:550px;">
+		<div class="options-panel">
             <h2>About</h2>
             This example simulates a real-time display of CPU utilization in a web farm.
             Data is updated in real-time, and cells with changed data are highlighted.
@@ -44,6 +45,7 @@
             <button onclick="simulateRealTimeUpdates()">Start simulation</button>
             <button onclick="findCurrentServer()">Find current server</button>
 		</div>
+        </div>
 
 		<script src="../lib/firebugx.js"></script>
 
