--- a/sites/all/libraries/slickgrid/examples/example2-formatters.html
+++ b/sites/all/libraries/slickgrid/examples/example2-formatters.html
@@ -27,7 +27,6 @@
 				<ul>
 					<li>width, minWidth, maxWidth, resizable, cssClass column attributes</li>
 					<li>custom column formatters</li>
-					<li>rowCssClasses option</li>
 				</ul>
 			</td>
 		</tr>
@@ -60,11 +59,7 @@
 		var options = {
 			editable: false,
 			enableAddRow: false,
-			enableCellNavigation: true,
-			rowCssClasses: function(item) {
-				// if a task is 100% done then its row gets an additional CSS class
-				return (item.percentComplete == 100) ? 'complete' : '';
-			}
+			enableCellNavigation: true
 		};
 
 
