--- a/sites/all/libraries/slickgrid/examples/example3a-compound-editors.html
+++ b/sites/all/libraries/slickgrid/examples/example3a-compound-editors.html
@@ -14,12 +14,12 @@
 	</head>
 	<body>
 
-
-		<div style="width:600px;float:left;">
+        <div style="position:relative">
+		<div style="width:600px;">
 			<div id="myGrid" style="width:100%;height:500px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
+		<div class="options-panel">
             <h2>Demonstrates:</h2>
             <ul>
                 <li>compound cell editors driving multiple fields from one cell</li>
@@ -27,6 +27,7 @@
                 <li>hooking into validation events</li>
             </ul>
 		</div>
+        </div>
 
 		<script src="../lib/firebugx.js"></script>
 
