--- a/sites/all/libraries/slickgrid/examples/example3b-editing-with-undo.html
+++ b/sites/all/libraries/slickgrid/examples/example3b-editing-with-undo.html
@@ -17,11 +17,12 @@
 	</style>
 	</head>
 	<body>
-		<div style="width:600px;float:left;">
+        <div style="position:relative">
+		<div style="width:600px;">
 			<div id="myGrid" style="width:100%;height:500px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
+		<div class="options-panel">
             <h2>Demonstrates:</h2>
             <ul>
                 <li>Using "editCommandHandler" option to intercept edit commands and implement undo support</li>
@@ -30,6 +31,7 @@
             <h2>Controls:</h2>
             <button onclick="undo()"><img src="../images/arrow_undo.png" align="absmiddle"> Undo</button> 
 		</div>
+        </div>
 
 		<script src="../lib/firebugx.js"></script>
 
