--- a/sites/all/libraries/slickgrid/examples/example4-model.html
+++ b/sites/all/libraries/slickgrid/examples/example4-model.html
@@ -32,7 +32,8 @@
 	</style>
 	</head>
 	<body>
-		<div style="width:600px;float:left;">
+        <div style="position:relative">
+		<div style="width:600px;">
 			<div class="grid-header" style="width:100%">
 				<label>SlickGrid</label>
                 <span style="float:right" class="ui-icon ui-icon-search" title="Toggle search panel" onclick="toggleFilterRow()"></span>
@@ -41,7 +42,7 @@
 			<div id="pager" style="width:100%;height:20px;"></div>
 		</div>
 
-		<div class="options-panel" style="width:320px;margin-left:650px;">
+		<div class="options-panel">
 			<b>Search:</b>
 			<hr/>
 			<div style="padding:6px;">
@@ -54,28 +55,27 @@
 				<input type=text id="txtSearch" style="width:100px;">
 				<br/><br/>
 				<button id="btnSelectRows">Select first 10 rows</button>
+    
+                <br/>
+                <h2>Demonstrates:</h2>
+                <ul>
+                    <li>a filtered Model (DataView) as a data source instead of a simple array</li>
+                    <li>grid reacting to model events (onRowCountChanged, onRowsChanged)</li>
+                    <li>
+                        <b>FAST</b> DataView recalculation and <b>real-time</b> grid updating in response to data changes.<br/>
+                        The grid holds <b>50'000</b> rows, yet you are able to sort, filter, scroll, navigate and edit as if it had 50 rows.
+                    </li>
+                    <li>adding new rows, bidirectional sorting</li>
+                    <li>column options:  cannotTriggerInsert</li>
+                    <li>events: onCellChange, onAddNewRow, onKeyDown, onSelectedRowsChanged, onSort</li>
+                    <li><font color=red>NOTE:</font>  all filters are immediately applied to new/edited rows</li>
+                    <li>Handling row selection against model changes.</li>
+                    <li>Paging.</li>
+                    <li>inline filter panel</li>
+			    </ul>
 			</div>
 		</div>
-
-		<div style="margin-left:650px;margin-top:40px;;">
-			<h2>Demonstrates:</h2>
-
-			<ul>
-				<li>a filtered Model (DataView) as a data source instead of a simple array</li>
-				<li>grid reacting to model events (onRowCountChanged, onRowsChanged)</li>
-				<li>
-					<b>FAST</b> DataView recalculation and <b>real-time</b> grid updating in response to data changes.<br/>
-					The grid holds <b>50'000</b> rows, yet you are able to sort, filter, scroll, navigate and edit as if it had 50 rows.
-				</li>
-				<li>adding new rows, bidirectional sorting</li>
-				<li>column options:  cannotTriggerInsert</li>
-                <li>events: onCellChange, onAddNewRow, onKeyDown, onSelectedRowsChanged, onSort</li>
-				<li><font color=red>NOTE:</font>  all filters are immediately applied to new/edited rows</li>
-				<li>Handling row selection against model changes.</li>
-				<li>Paging.</li>
-                <li>inline filter panel</li>
-			</ul>
-		</div>
+        </div>
 
         <div id="inlineFilterPanel" style="display:none;background:#dddddd;padding:3px;color:black;">
             Show tasks with title including <input type="text" id="txtSearch2">
@@ -103,7 +103,7 @@
 		var selectedRowIds = [];
 
 		var columns = [
-			{id:"sel", name:"#", field:"num", behavior:"select", cssClass:"cell-selection", width:40, cannotTriggerInsert:true, resizable:false, unselectable:true },
+			{id:"sel", name:"#", field:"num", behavior:"select", cssClass:"cell-selection", width:40, cannotTriggerInsert:true, resizable:false, selectable:false },
 			{id:"title", name:"Title", field:"title", width:120, minWidth:120, cssClass:"cell-title", editor:TextCellEditor, validator:requiredFieldValidator, sortable:true},
 			{id:"duration", name:"Duration", field:"duration", editor:TextCellEditor, sortable:true},
 			{id:"%", name:"% Complete", field:"percentComplete", width:80, resizable:false, formatter:GraphicalPercentCompleteCellFormatter, editor:PercentCompleteCellEditor, sortable:true},
