--- a/sites/all/libraries/slickgrid/examples/example7-events.html
+++ b/sites/all/libraries/slickgrid/examples/example7-events.html
@@ -78,7 +78,7 @@
 
 		var columns = [
 			{id:"title", name:"Title", field:"title", width:200, cssClass:"cell-title", editor:TextCellEditor},
-			{id:"priority", name:"Priority", field:"priority", width:80, unselectable:true, resizable:false}
+			{id:"priority", name:"Priority", field:"priority", width:80, selectable:false, resizable:false}
 		];
 
 		var options = {
@@ -117,7 +117,15 @@
                 });
             });
 
-
+            grid.onClick.subscribe(function(e) {
+                var cell = grid.getCellFromEvent(e);
+                if (columns[cell.cell].id == "priority") {
+                    var states = { "Low": "Medium", "Medium": "High", "High": "Low" };
+                    data[cell.row].priority = states[data[cell.row].priority];
+                    grid.updateRow(cell.row);
+                    e.stopPropagation();
+                }
+            });
         });
 
 		$("#contextMenu").click(function(e) {
