--- a/sites/all/modules/contrib/biblio/changelog.html
+++ b/sites/all/modules/contrib/biblio/changelog.html
@@ -10,7 +10,7 @@
 <h3>7.x-dev</h3>
 <b>New features...</b>
 <ul>
-<li>Added <a href="http://drupal.org/project/feeds">Feeds</a> mapper hooks to allow Feeds modules to access Biblio fields</li>
+<li>Added <a href="http://drupal.org/node/1443250">#1443250</a> Formatted text fields now respect the format setting when rendered in Views</li>
 <li>Added a field mapper GUI for the CiteProc module at admin/config/content/biblio/citeproc/map</li>
 <li>Added a "highlight" feature to the "authors" page which allows privileged users to toggle highlighting of potential duplicate authors</li>
 <li><a href="http://drupal.org/node/1140366">#1140366</a> Patch: PubMed XML Bulk Import</li>
@@ -18,6 +18,7 @@
 
 <b>Bugs Fixed...</b>
 <ul>
+<li><a href="http://drupal.org/node/741212">#741212</a> Fixed: Wrong node count on author/keyword overview pages, when using revisions</li>
 <li><a href="http://drupal.org/node/1206278">#1206278</a> Fixed: Author order not saved when updating an existing Biblio</li>
 <li><a href="http://drupal.org/node/972312">#972312</a> Fixed: casting issue in biblio_save_node() (implmented node_object_prepare)</li>
 <li><a href="http://drupal.org/node/1138636">#1138636</a> Fixed: Show filefield attachment link in list view</li>
