--- a/sites/all/libraries/plupload/examples/jquery/jquery_ui_widget.html
+++ b/sites/all/libraries/plupload/examples/jquery/jquery_ui_widget.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<title>Plupload - Queue widget example</title>
+<title>Plupload - jQuery UI Widget</title>
 <style type="text/css">
 	body {
 		font-family:Verdana, Geneva, sans-serif;
@@ -77,25 +77,24 @@ $(function() {
 
 	// Client side form validation
 	$('form').submit(function(e) {
-		var uploader = $('#uploader').plupload('getUploader');
+        var uploader = $('#uploader').plupload('getUploader');
 
-		// Validate number of uploaded files
-		if (uploader.total.uploaded == 0) {
-			// Files in queue upload them first
-			if (uploader.files.length > 0) {
-				// When all files are uploaded submit form
-				uploader.bind('UploadProgress', function() {
-					if (uploader.total.uploaded == uploader.files.length)
-						$('form').submit();
-				});
+        // Files in queue upload them first
+        if (uploader.files.length > 0) {
+            // When all files are uploaded submit form
+            uploader.bind('StateChanged', function() {
+                if (uploader.files.length === (uploader.total.uploaded + uploader.total.failed)) {
+                    $('form')[0].submit();
+                }
+            });
+                
+            uploader.start();
+        } else
+            alert('You must at least upload one file.');
 
-				uploader.start();
-			} else
-				alert('You must at least upload one file.');
-
-			e.preventDefault();
-		}
-	});
+        return false;
+    });
+	 
 
 });
 </script>
